<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/p_exit_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_look_vod"
                style="@style/text_42_f2f2f2"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="70dp"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center_horizontal"
	            >
            	 <Button 
            	    android:id="@+id/p_eixt_sure"
            	    android:layout_width="202dp"
            	    android:layout_height="62dp"
            	    android:text="@string/sure"
            	    android:background="@drawable/bg_p_exit"
            	    android:layout_alignParentRight="true"
            	    android:textColor="@color/color_p_exit"
            	    android:textSize="35dp"
            	    />
            	 
            	 <Button 
            	    android:id="@+id/p_eixt_cancel"
            	    android:layout_width="202dp"
            	    android:layout_height="62dp"
            	    android:text="@string/cancel"
            	    android:background="@drawable/bg_p_exit"
            	    android:layout_alignParentLeft="true"
            	    android:textSize="35dp"
            	    android:textColor="@color/color_p_exit"
            	    android:layout_marginLeft="20dp"
            	    android:layout_gravity="right"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
